Bug 1460787 - Change fatal assertion to warning for extremely large sized pages. r=dholbert

MozReview-Commit-ID: 8MpvqbecU2k